--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,34 @@
-.header-box {
-    height:250px;    
-    .header-nav {
-        height:70px;
-        background-color:#000;        
+.box{
+    display: flex;
+    flex-direction: column;
+    .header-box {
+        height:240px;    
+        .header-nav {
+            height:80px;
+            background-color:#000;        
+        }
+        .header-img{
+            height:160px;
+            background-color:#343434;
+        }
     }
-    .header-img{
-        height:180px;
-        background-color:#343434;
+    .container{
+        display:flex;
+        width:100%;        
+        max-width:1170px;
+        padding:0 10px;
+        height:1000px;
+        background-color:#568454;
+        margin:0 auto;
+        .content{
+            
+        }
+        .sidebar{
+            
+        }
     }
-}
-
-.container{
-    display:flex;
-    padding:20px;
-    height:1000px;
-    background-color:#568454;
-    margin:0 auto;
+    .footer-box{
+        height:80px;
+        background-color:#333;
+    }
 }
