--- a/common/common.scss
+++ b/common/common.scss
@@ -1,5 +1,27 @@
-body{
+body,figure,figcaption{
     padding:0;
     margin:0;
     background:#eeeded;
+}
+
+ul{
+    padding:0;
+    margin:0;
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color:#000;
+}
+
+.bar-tag-group{
+
+}
+
+.bar-tag{
+    display:inline-block;
+    padding:5px;
+    border-radius:5px;
+    background:goldenrod;
 }
