--- a/src/index.scss
+++ b/src/index.scss
@@ -21,11 +21,15 @@ $bar-padding:20px;
         padding:0 10px;
         margin:0 auto;
         .content{
-            flex:3;
+            flex:2.5;
+            display:flex;
+            flex-direction: row;
+            flex-wrap:wrap;
             .one-bar{
                 background:#fff;
                 margin-top:20px;
                 padding-bottom:10px;
+                width:100%;
                 header{
                     display:flex;
                     flex-direction: row;
@@ -33,29 +37,58 @@ $bar-padding:20px;
                     .bar-date{
                         text-align: center;
                         border-right:1px solid #ccc;
+                        padding:5px 0;
                         flex:1;
                         .date-day{
-                            font-size:26px;
+                            font-size:36px;
                             font-weight:600;
-                        }
-                        .date-month{
-                            margin-top:5px;
                         }
                     }
                     .bar-title{
                         flex:6;
                         padding-left:20px;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
                     }   
                 }
                 .bar-body{
                     width:100%;
                     .bar-box{
+                        .loading-img-box{
+                            display:block;                            
+                            width:100%;
+                            height:200px;
+                            background-color:green;
+                        }
                         .img-box{
+                            display:none;
                             max-height:300px;
                             overflow:hidden;
+                            position: relative;
                             .bar-img{
                                 width:100%;
-                            }  
+                            }
+                            &::after{
+                                content:'';
+                                width:100%;
+                                height:100%;                             
+                                opacity:0;
+                                top:0;
+                                left:0;
+                                position: absolute;
+                                background-color:rgba(0,0,0,0.5);
+                                transition:all 0.5s linear;
+                            }
+                            &:hover::after{
+                                opacity:1;
+                            }
+                            &:hover .bar-img{
+                                width:120%;
+                                margin-left:-10%;
+                                margin-top:-10%;
+                                transition:all 1s linear;                                
+                            }
                         }
                         .bar-desc{
                             word-wrap:break-word;
