--- a/common/common.scss
+++ b/common/common.scss
@@ -4,6 +4,11 @@ body,figure,figcaption{
     background:#eeeded;
 }
 
+h1,h2,h3,h4,h5,h6{
+    padding:0;
+    margin:0;
+}
+
 ul{
     padding:0;
     margin:0;
