--- a/src/index.scss
+++ b/src/index.scss
@@ -59,7 +59,7 @@ $bar-padding:20px;
                             display:block;                            
                             width:100%;
                             height:200px;
-                            background-color:green;
+                            background:#212c25 url(http://sparklv.cn/img/icon/img-loading.svg) no-repeat center center;                            
                         }
                         .img-box{
                             display:none;
@@ -71,13 +71,14 @@ $bar-padding:20px;
                             }
                             &::after{
                                 content:'';
+                                cursor: pointer;
                                 width:100%;
                                 height:100%;                             
                                 opacity:0;
                                 top:0;
                                 left:0;
                                 position: absolute;
-                                background-color:rgba(0,0,0,0.5);
+                                background:rgba(0,0,0,0.5) url(http://sparklv.cn/img/icon/gotoEssay.png) no-repeat center center/100px 100px;
                                 transition:all 0.5s linear;
                             }
                             &:hover::after{
@@ -117,6 +118,60 @@ $bar-padding:20px;
                     margin-top:13px;
                 }
             }
+            .side-rank{
+                margin-top:20px;
+                width:100%;
+                .rank-tab{
+                    .rank-tab-item{
+                        width:50%;
+                        height:50px;
+                        float:left;
+                        line-height:50px;
+                        text-align:center;
+                        background:#ebebeb;
+                        cursor: pointer;
+                        border:1px solid #dedede;
+                        box-sizing: border-box;
+                    }
+                    .active{
+                        background:#fff;
+                    }
+                }
+                .rank-body{
+                    width:100%;
+                    height:300px;
+                    background:#fff;
+                    overflow: hidden;
+                    .rank-essay-box{
+                        display:flex;
+                        width:100%;
+                        padding:10px;
+                        max-height:70px;
+                        overflow: hidden;
+                        border-bottom:1px solid #dedede;
+                        .rank-essay-img-box{
+                            flex:1;
+                            .rank-essay-img{
+                                width:100%;
+                            }
+                        }
+                        .rank-essay-detail{
+                            flex:2;
+                            display:flex;
+                            flex-direction: column;
+                            justify-content: flex-start;
+                            margin-left:10px;
+                            h4{
+                                color:#343434;
+                            }
+                            .rank-essay-time{
+                                font-size: 12px;
+                                color:#999;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
     .footer-box{
@@ -124,4 +179,10 @@ $bar-padding:20px;
         height:80px;
         background-color:#333;
     }
+}
+.read-most{
+    display:block;
+}
+.new-most{
+    display:none;
 }
