--- a/src/index.scss
+++ b/src/index.scss
@@ -9,9 +9,37 @@ $bar-padding:20px;
             height:80px;
             background-color:#000;        
         }
-        .header-img{
-            height:160px;
-            background-color:#343434;
+        .header-img-box{
+            position: relative;
+            max-height:160px;
+            overflow: hidden;
+            .header-img{
+                display:none;
+                width:100%;
+                background-color:#343434;
+            }
+            .head-img-show{
+                display:block;
+            }
+            .img-control{
+                position: absolute;
+                top:50%;
+                transform: translateY(-50%);
+                right:20px;
+                background:#FFE4E1;
+                padding:0 5px 5px;
+                li:nth-child(1){
+                    background:#000;
+                }
+                li{
+                    cursor: pointer;
+                    margin-top:10px;
+                    width:10px;
+                    height:10px;
+                    border:2px solid #333;
+                    border-radius: 50%;
+                }
+            }
         }
     }
     .container{
@@ -26,6 +54,7 @@ $bar-padding:20px;
             flex-direction: row;
             flex-wrap:wrap;
             .one-bar{
+                display:none;
                 background:#fff;
                 margin-top:20px;
                 padding-bottom:10px;
@@ -139,7 +168,6 @@ $bar-padding:20px;
                 }
                 .rank-body{
                     width:100%;
-                    height:300px;
                     background:#fff;
                     overflow: hidden;
                     .rank-essay-box{
@@ -176,7 +204,7 @@ $bar-padding:20px;
     }
     .footer-box{
         margin-top:20px;
-        height:80px;
+        height:300px;
         background-color:#333;
     }
 }
@@ -185,4 +213,42 @@ $bar-padding:20px;
 }
 .new-most{
     display:none;
+}
+.loading-more{
+    display:none;
+}
+.loading-more-text{
+    margin-top:20px;  
+    text-align: center;
+    span{
+        display:inline-block;
+        padding:5px;
+        border:1px solid #666;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+}
+
+.to-top{
+    display:none;
+    position: fixed;
+    bottom:50px;
+    right:50px;
+    width:40px;
+    height:40px;
+    border-radius: 50%;
+    background:#ecebeb;
+    cursor: pointer;
+    &:hover{
+        background:#bbbaba;
+    }
+    .to-top-arrow{
+        margin-top:15px;
+        margin-left:15px;
+        width:10px;
+        height:10px;
+        border-left:2px solid #000;
+        border-bottom:2px solid #000;
+        transform:rotate(135deg);
+    }
 }
