--- a/src/index.scss
+++ b/src/index.scss
@@ -1,330 +1,331 @@
-$bar-padding:20px;
+$bar-padding: 20px;
 
-@keyframes widthToFull{
-    from{
-        width:1%;
-    }
-    to{
-        width:100%;
-    }
+@keyframes widthToFull {
+  from {
+    width: 1%;
+  }
+  to {
+    width: 100%;
+  }
 }
 
-.box{
+.box {
+  display: flex;
+  flex-direction: column;
+  .header-box {
+    height: 240px;
+    .header-head {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 20px;
+      height: 80px;
+      background-color: #000;
+      .head-logo {
+        color: #fff;
+      }
+      .head-nav {
+        position: relative;
+        & > ul {
+          display: flex;
+          .head-nav-item {
+            padding: 15px 20px;
+            color: #aaa;
+            &:hover {
+              cursor: pointer;
+              color: #fff;
+              background: #353535;
+              .nav-list {
+                display: block;
+              }
+            }
+            .nav-list {
+              display: none;
+              padding-top: 10px;
+              background: #353535;
+              color: #fff;
+              position: absolute;
+              width: 100%;
+              left: 0;
+              top: 46px;
+              z-index: 2;
+              &::before {
+                content: "";
+                display: block;
+                position: absolute;
+                top: 2px;
+                left: 0;
+                height: 2px;
+                background: skyblue;
+                animation: widthToFull 2s;
+                animation-fill-mode: forwards;
+              }
+              .nav-list-item {
+                float: left;
+                padding: 10px;
+                &:hover {
+                  cursor: pointer;
+                  background: #666666;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .header-img-box {
+      position: relative;
+      max-height: 160px;
+      overflow: hidden;
+      .img-title {
+        display: none;
+        position: absolute;
+        top: 30px;
+        left: 50px;
+        color: #fff;
+        .first-line {
+          font-size: 20px;
+          font-weight: 600;
+        }
+        .second-line {
+        }
+      }
+      .img-title:nth-child(1) {
+        display: block;
+      }
+      .header-img {
+        display: none;
+        width: 100%;
+        background-color: #343434;
+      }
+      .head-img-show {
+        display: block;
+      }
+      .img-control {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 20px;
+        background: rgba(222, 222, 222, 0.3);
+        padding: 0 5px 5px;
+        li:nth-child(1) {
+          background: #000;
+        }
+        li {
+          cursor: pointer;
+          margin-top: 10px;
+          width: 10px;
+          height: 10px;
+          border: 2px solid #333;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
+  .container {
     display: flex;
-    flex-direction: column;
-    .header-box {
-        height:240px;    
-        .header-head {
-            display:flex;
-            align-items:center;
-            justify-content: space-between;
-            padding: 0 20px;
-            height:80px;
-            background-color:#000;
-            .head-logo{
-                color:#fff;
+    width: 90%;
+    max-width: 1300px;
+    padding: 0 10px;
+    margin: 0 auto;
+    .content {
+      flex: 3;
+      position: relative;
+      .one-bar {
+        display: none;
+        background: #fff;
+        margin-top: 20px;
+        margin-left: 20px;
+        padding-bottom: 10px;
+        width: 30%;
+        min-width: 250px;
+        position: absolute;
+        .bar-body {
+          width: 100%;
+          .bar-box {
+            .loading-img-box {
+              display: block;
+              width: 100%;
+              height: 150px;
+              background: #212c25
+                url(http://sparklv.cn/img/icon/img-loading.svg) no-repeat center
+                center;
             }
-            .head-nav{
-                position: relative;                
-                &>ul{
-                    display:flex;
-                    .head-nav-item{
-                        padding:15px 20px;
-                        color:#aaa;
-                        &:hover{
-                            cursor: pointer;                            
-                            color:#fff;
-                            background:#353535;                            
-                            .nav-list{
-                                display:block;
-                            }
-                        }
-                        .nav-list{
-                            display:none;
-                            padding-top:10px;
-                            background:#353535;
-                            color:#fff;
-                            position: absolute;
-                            width:100%;
-                            left:0;
-                            top:46px;
-                            z-index:2;
-                            &::before{
-                                content: '';
-                                display:block;
-                                position: absolute;
-                                top:2px;
-                                left:0;
-                                height:2px;
-                                background: skyblue;
-                                animation:widthToFull 2s;
-                                animation-fill-mode: forwards;
-                            }
-                            .nav-list-item{
-                                float: left;
-                                padding:10px;
-                                &:hover{
-                                    cursor: pointer;
-                                    background: #666666;
-                                }
-                            }
-                        }
-                    }
-                }
+            .img-box {
+              display: none;
+              height: 150px;
+              overflow: hidden;
+              position: relative;
+              .bar-img {
+                width: 100%;
+              }
+              &::after {
+                content: "";
+                cursor: pointer;
+                width: 100%;
+                height: 150px;
+                opacity: 0;
+                top: 0;
+                left: 0;
+                position: absolute;
+                background: rgba(0, 0, 0, 0.5)
+                  url(http://sparklv.cn/img/icon/gotoEssay.png) no-repeat center
+                  center/100px 100px;
+                transition: all 0.5s linear;
+              }
+              &:hover::after {
+                opacity: 1;
+              }
+              &:hover .bar-img {
+                width: 120%;
+                margin-left: -10%;
+                margin-top: -10%;
+                transition: all 1s linear;
+              }
             }
+          }
         }
-        .header-img-box{
-            position: relative;
-            max-height:160px;
+        .bar-head {
+          padding-left: 10px;
+          .bar-title {
+            font-size: 18px;
+            font-weight: 600;
+            margin: 15px 0 10px;
+            border-bottom: 1px solid #eee;
+          }
+          .bar-desc {
+            word-wrap: break-word;
+            background: #fff;
+          }
+        }
+        .bar-footer {
+          .bar-date {
+            margin: 15px 0 10px;
+            color: #666;
+          }
+        }
+      }
+    }
+    .sidebar {
+      flex: 1;
+      margin-top: 20px;
+      margin-left: 50px;
+      .search-box {
+        width: 100%;
+        height: 60px;
+        background: #fff;
+        input {
+          width: 80%;
+          height: 28px;
+          margin-left: 10%;
+          margin-top: 13px;
+        }
+      }
+      .side-rank {
+        margin-top: 20px;
+        width: 100%;
+        .rank-tab {
+          .rank-tab-item {
+            width: 50%;
+            height: 50px;
+            float: left;
+            line-height: 50px;
+            text-align: center;
+            background: #ebebeb;
+            cursor: pointer;
+            border: 1px solid #dedede;
+            box-sizing: border-box;
+          }
+          .active {
+            background: #fff;
+          }
+        }
+        .rank-body {
+          width: 100%;
+          background: #fff;
+          overflow: hidden;
+          .rank-essay-box {
+            display: flex;
+            width: 100%;
+            padding: 10px;
+            max-height: 70px;
             overflow: hidden;
-            .img-title{
-                display:none;
-                position: absolute;
-                top:30px;
-                left:50px;
-                color:#fff;
-                .first-line{
-                    font-size:20px;
-                    font-weight:600;
-                }
-                .second-line{
-                    
-                }
+            border-bottom: 1px solid #dedede;
+            .rank-essay-img-box {
+              flex: 1;
+              .rank-essay-img {
+                width: 100%;
+              }
             }
-            .img-title:nth-child(1){
-                display:block;
+            .rank-essay-detail {
+              flex: 2;
+              display: flex;
+              flex-direction: column;
+              justify-content: flex-start;
+              margin-left: 10px;
+              h4 {
+                color: #343434;
+              }
+              .rank-essay-time {
+                font-size: 12px;
+                color: #999;
+              }
             }
-            .header-img{
-                display:none;
-                width:100%;
-                background-color:#343434;
-            }
-            .head-img-show{
-                display:block;
-            }
-            .img-control{
-                position: absolute;
-                top:50%;
-                transform: translateY(-50%);
-                right:20px;
-                background:rgba(222,222,222,0.3);
-                padding:0 5px 5px;
-                li:nth-child(1){
-                    background:#000;
-                }
-                li{
-                    cursor: pointer;
-                    margin-top:10px;
-                    width:10px;
-                    height:10px;
-                    border:2px solid #333;
-                    border-radius: 50%;
-                }
-            }
+          }
         }
+      }
     }
-    .container{
-        display:flex;
-        width:90%;        
-        max-width:1300px;
-        padding:0 10px;
-        margin:0 auto;
-        .content{
-            flex:2.5;
-            display:flex;
-            flex-direction: row;
-            flex-wrap:wrap;
-            .one-bar{
-                display:none;
-                background:#fff;
-                margin-top:20px;
-                margin-left:20px;
-                padding-bottom:10px;
-                width:30%;
-                min-width:250px;
-                header{
-                    display:flex;
-                    flex-direction: row;
-                    align-items: center;
-                    .bar-title{
-                        flex:2;
-                        padding-left:20px;
-                        text-overflow: ellipsis;
-                        overflow: hidden;
-                        white-space: nowrap;
-                    }   
-                }
-                .bar-body{
-                    width:100%;
-                    .bar-box{
-                        .loading-img-box{
-                            display:block;                            
-                            width:100%;
-                            height:150px;
-                            background:#212c25 url(http://sparklv.cn/img/icon/img-loading.svg) no-repeat center center;                            
-                        }
-                        .img-box{
-                            display:none;
-                            height:150px;
-                            overflow:hidden;
-                            position: relative;
-                            .bar-img{
-                                width:100%;
-                            }
-                            &::after{
-                                content:'';
-                                cursor: pointer;
-                                width:100%;
-                                height:150px;                    
-                                opacity:0;
-                                top:0;
-                                left:0;
-                                position: absolute;
-                                background:rgba(0,0,0,0.5) url(http://sparklv.cn/img/icon/gotoEssay.png) no-repeat center center/100px 100px;
-                                transition:all 0.5s linear;
-                            }
-                            &:hover::after{
-                                opacity:1;
-                            }
-                            &:hover .bar-img{
-                                width:120%;
-                                margin-left:-10%;
-                                margin-top:-10%;
-                                transition:all 1s linear;                                
-                            }
-                        }
-                        .bar-desc{
-                            word-wrap:break-word;
-                            background:#fff;
-                            padding:$bar-padding;
-                        }
-                    }
-                }
-                .bar-footer{
-                    padding-left:$bar-padding;
-                }
-            }
-        }
-        .sidebar{
-            flex:1;
-            margin-top:20px;
-            margin-left:50px;
-            .search-box{
-                width:100%;
-                height:60px;
-                background:#fff;
-                input{
-                    width:80%;
-                    height:28px;
-                    margin-left:10%;
-                    margin-top:13px;
-                }
-            }
-            .side-rank{
-                margin-top:20px;
-                width:100%;
-                .rank-tab{
-                    .rank-tab-item{
-                        width:50%;
-                        height:50px;
-                        float:left;
-                        line-height:50px;
-                        text-align:center;
-                        background:#ebebeb;
-                        cursor: pointer;
-                        border:1px solid #dedede;
-                        box-sizing: border-box;
-                    }
-                    .active{
-                        background:#fff;
-                    }
-                }
-                .rank-body{
-                    width:100%;
-                    background:#fff;
-                    overflow: hidden;
-                    .rank-essay-box{
-                        display:flex;
-                        width:100%;
-                        padding:10px;
-                        max-height:70px;
-                        overflow: hidden;
-                        border-bottom:1px solid #dedede;
-                        .rank-essay-img-box{
-                            flex:1;
-                            .rank-essay-img{
-                                width:100%;
-                            }
-                        }
-                        .rank-essay-detail{
-                            flex:2;
-                            display:flex;
-                            flex-direction: column;
-                            justify-content: flex-start;
-                            margin-left:10px;
-                            h4{
-                                color:#343434;
-                            }
-                            .rank-essay-time{
-                                font-size: 12px;
-                                color:#999;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-    .footer-box{
-        margin-top:20px;
-        height:300px;
-        background-color:#333;
-    }
+  }
+  .footer-box {
+    margin-top: 20px;
+    height: 300px;
+    background-color: #333;
+  }
 }
-.read-most{
-    display:block;
+.read-most {
+  display: block;
 }
-.new-most{
-    display:none;
+.new-most {
+  display: none;
 }
-.loading-more{
-    display:none;
+.loading-more {
+  display: none;
 }
-.loading-more-text{
-    margin-top:20px;  
-    text-align: center;
-    span{
-        display:inline-block;
-        padding:5px;
-        border:1px solid #666;
-        border-radius: 4px;
-        cursor: pointer;
-    }
+.loading-more-text {
+  margin-top: 20px;
+  text-align: center;
+  span {
+    display: inline-block;
+    padding: 5px;
+    border: 1px solid #666;
+    border-radius: 4px;
+    cursor: pointer;
+  }
 }
 
-.to-top{
-    display:none;
-    position: fixed;
-    bottom:50px;
-    right:50px;
-    width:40px;
-    height:40px;
-    border-radius: 50%;
-    background:#ecebeb;
-    cursor: pointer;
-    &:hover{
-        background:#bbbaba;
-    }
-    .to-top-arrow{
-        margin-top:15px;
-        margin-left:15px;
-        width:10px;
-        height:10px;
-        border-left:2px solid #000;
-        border-bottom:2px solid #000;
-        transform:rotate(135deg);
-    }
+.to-top {
+  display: none;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #ecebeb;
+  cursor: pointer;
+  &:hover {
+    background: #bbbaba;
+  }
+  .to-top-arrow {
+    margin-top: 15px;
+    margin-left: 15px;
+    width: 10px;
+    height: 10px;
+    border-left: 2px solid #000;
+    border-bottom: 2px solid #000;
+    transform: rotate(135deg);
+  }
 }
-.calender-box{
-    // width:100%;
+.calender-box {
+  // width:100%;
 }
