--- a/src/index.scss
+++ b/src/index.scss
@@ -10,8 +10,6 @@ $bar-padding: 20px;
 }
 
 .box {
-  display: flex;
-  flex-direction: column;
   .header-box {
     height: 240px;
     .header-head {
@@ -123,70 +121,68 @@ $bar-padding: 20px;
     }
   }
   .container {
-    display: flex;
-    width: 90%;
+    width: 100%;
+    position: relative;
     max-width: 1300px;
-    padding: 0 10px;
     margin: 0 auto;
+    text-align: center;
     .content {
-      flex: 3;
-      position: relative;
+      &::after {
+        content: "";
+        display: block;
+        clear: both;
+      }
       .one-bar {
         display: none;
         background: #fff;
-        margin-top: 20px;
-        margin-left: 20px;
-        padding-bottom: 10px;
-        width: 30%;
-        min-width: 250px;
-        position: absolute;
+        width: 25%;
+        height: 400px;
         .bar-body {
           width: 100%;
-          .bar-box {
-            .loading-img-box {
-              display: block;
+          .loading-img-box {
+            display: block;
+            width: 100%;
+            height: 150px;
+            background: #212c25 url(http://sparklv.cn/img/icon/img-loading.svg)
+              no-repeat center center;
+          }
+          .img-box {
+            display: none;
+            height: 150px;
+            overflow: hidden;
+            position: relative;
+            .bar-img {
+              width: 100%;
+            }
+            &::after {
+              content: "";
+              cursor: pointer;
               width: 100%;
               height: 150px;
-              background: #212c25
-                url(http://sparklv.cn/img/icon/img-loading.svg) no-repeat center
-                center;
+              opacity: 0;
+              top: 0;
+              left: 0;
+              position: absolute;
+              background: rgba(0, 0, 0, 0.5)
+                url(http://sparklv.cn/img/icon/gotoEssay.png) no-repeat center
+                center/100px 100px;
+              transition: all 0.5s linear;
             }
-            .img-box {
-              display: none;
-              height: 150px;
-              overflow: hidden;
-              position: relative;
-              .bar-img {
-                width: 100%;
-              }
-              &::after {
-                content: "";
-                cursor: pointer;
-                width: 100%;
-                height: 150px;
-                opacity: 0;
-                top: 0;
-                left: 0;
-                position: absolute;
-                background: rgba(0, 0, 0, 0.5)
-                  url(http://sparklv.cn/img/icon/gotoEssay.png) no-repeat center
-                  center/100px 100px;
-                transition: all 0.5s linear;
-              }
-              &:hover::after {
-                opacity: 1;
-              }
-              &:hover .bar-img {
-                width: 120%;
-                margin-left: -10%;
-                margin-top: -10%;
-                transition: all 1s linear;
-              }
+            &:hover::after {
+              opacity: 1;
+            }
+            &:hover .bar-img {
+              width: 120%;
+              margin-left: -10%;
+              margin-top: -10%;
+              transition: all 1s linear;
             }
           }
         }
         .bar-head {
           padding-left: 10px;
+          height: 175px;
+          overflow: auto;
           .bar-title {
             font-size: 18px;
             font-weight: 600;
@@ -199,6 +195,7 @@ $bar-padding: 20px;
           }
         }
         .bar-footer {
+          height: 75px;
           .bar-date {
             margin: 15px 0 10px;
             color: #666;
@@ -210,6 +207,7 @@ $bar-padding: 20px;
       flex: 1;
       margin-top: 20px;
       margin-left: 50px;
+      display: none;
       .search-box {
         width: 100%;
         height: 60px;
