--- a/src/index.scss
+++ b/src/index.scss
@@ -212,76 +212,6 @@ $bar-padding: 20px;
         }
       }
     }
-    .sidebar {
-      flex: 1;
-      margin-top: 20px;
-      margin-left: 50px;
-      display: none;
-      .search-box {
-        width: 100%;
-        height: 60px;
-        background: #fff;
-        input {
-          width: 80%;
-          height: 28px;
-          margin-left: 10%;
-          margin-top: 13px;
-        }
-      }
-      .side-rank {
-        margin-top: 20px;
-        width: 100%;
-        .rank-tab {
-          .rank-tab-item {
-            width: 50%;
-            height: 50px;
-            float: left;
-            line-height: 50px;
-            text-align: center;
-            background: #ebebeb;
-            cursor: pointer;
-            border: 1px solid #dedede;
-            box-sizing: border-box;
-          }
-          .active {
-            background: #fff;
-          }
-        }
-        .rank-body {
-          width: 100%;
-          background: #fff;
-          overflow: hidden;
-          .rank-essay-box {
-            display: flex;
-            width: 100%;
-            padding: 10px;
-            max-height: 70px;
-            overflow: hidden;
-            border-bottom: 1px solid #dedede;
-            .rank-essay-img-box {
-              flex: 1;
-              .rank-essay-img {
-                width: 100%;
-              }
-            }
-            .rank-essay-detail {
-              flex: 2;
-              display: flex;
-              flex-direction: column;
-              justify-content: flex-start;
-              margin-left: 10px;
-              h4 {
-                color: #343434;
-              }
-              .rank-essay-time {
-                font-size: 12px;
-                color: #999;
-              }
-            }
-          }
-        }
-      }
-    }
   }
   .footer-box {
     margin-top: 20px;
@@ -289,6 +219,90 @@ $bar-padding: 20px;
     background-color: #333;
   }
 }
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  width: 400px;
+  background-color: #fff;
+  overflow: auto;
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+  .side-head {
+    position: relative;
+    height: 20px;
+    .side-head-close {
+      position: absolute;
+      right: 20px;
+      cursor: pointer;
+    }
+  }
+  .search-box {
+    width: 100%;
+    height: 60px;
+    background: #fff;
+    input {
+      width: 80%;
+      height: 28px;
+      margin-left: 10%;
+      margin-top: 13px;
+    }
+  }
+  .side-rank {
+    margin-top: 20px;
+    width: 100%;
+    .rank-tab {
+      .rank-tab-item {
+        width: 50%;
+        height: 50px;
+        float: left;
+        line-height: 50px;
+        text-align: center;
+        background: #ebebeb;
+        cursor: pointer;
+        border: 1px solid #dedede;
+        box-sizing: border-box;
+      }
+      .active {
+        background: #fff;
+      }
+    }
+    .rank-body {
+      width: 100%;
+      background: #fff;
+      overflow: hidden;
+      .rank-essay-box {
+        display: flex;
+        width: 100%;
+        padding: 10px;
+        max-height: 70px;
+        overflow: hidden;
+        border-bottom: 1px solid #dedede;
+        .rank-essay-img-box {
+          flex: 1;
+          .rank-essay-img {
+            width: 100%;
+          }
+        }
+        .rank-essay-detail {
+          flex: 2;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          margin-left: 10px;
+          h4 {
+            color: #343434;
+          }
+          .rank-essay-time {
+            font-size: 12px;
+            color: #999;
+          }
+        }
+      }
+    }
+  }
+}
+
 .read-most {
   display: block;
 }
@@ -310,7 +324,7 @@ $bar-padding: 20px;
   }
 }
 
-.to-top {
+%oper-bar {
   display: none;
   position: fixed;
   bottom: 50px;
@@ -323,6 +337,10 @@ $bar-padding: 20px;
   &:hover {
     background: #bbbaba;
   }
+}
+
+.to-top {
+  @extend %oper-bar;
   .to-top-arrow {
     margin-top: 15px;
     margin-left: 15px;
@@ -331,6 +349,17 @@ $bar-padding: 20px;
     border-left: 2px solid #000;
     border-bottom: 2px solid #000;
     transform: rotate(135deg);
+  }
+}
+
+.more-menu {
+  @extend %oper-bar;
+  bottom: 100px;
+  display: block;
+  text-align: center;
+  line-height: 40px;
+  i {
+    font-size: 25px;
   }
 }
 .calender-box {
