--- a/common/common.scss
+++ b/common/common.scss
@@ -1,28 +1,47 @@
-body,figure,figcaption{
-    padding:0;
-    margin:0;
-    background:#eeeded;
+body,
+figure,
+figcaption {
+  padding: 0;
+  margin: 0;
+  background: #eeeded;
 }
 
-h1,h2,h3,h4,h5,h6{
-    padding:0;
-    margin:0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 0;
+  margin: 0;
 }
 
-ul{
-    padding:0;
-    margin:0;
-    list-style: none;
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
-a{
-    text-decoration: none;
-    color:#000;
+a {
+  text-decoration: none;
+  color: #000;
 }
 
-.bar-tag{
-    display:inline-block;
-    font-size:12px;
-    padding:5px;
-    border-radius:5px;
+.bar-tag {
+  display: inline-block;
+  font-size: 12px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.article-box {
+  width: 75%;
+  margin: 100px auto 20px;
+}
+.article-img-box {
+  height: 500px;
+  overflow: hidden;
+}
+.article-img {
+  width: 100%;
 }
